--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.16.2",
     "http": "0.0.0",
     "mongodb": "^3.0.1",
-    "mongoose": "^5.0.1"
+    "mongoose": "^5.0.1",
+    "node-restful": "^0.2.6"
   },
   "devDependencies": {
     "nodemon": "^1.14.11"
